# FLAC-Chop

./: .gitignore  CMakeLists.txt  dev_notes.md  readme.md
.github/workflows/: build.yml  tests.yml
core/: Cargo.toml
core/examples/: chop_cli.rs  probe_cli.rs
core/src/: chop.rs  companions.rs  ffi.rs  lib.rs  msps.rs  probe.rs  rate.rs  vorbis.rs
core/tests/: ffi_plan.rs
gui/: CMakeLists.txt  flacchop.h  main.cpp  mainwindow.cpp  mainwindow.h  rangeslider.cpp  rangeslider.h
